--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                 explanation: "A key advantage of balanced three-phase systems is that the instantaneous power is constant and does not pulsate."
             },
             {
-                question: "In a Wye-connected source, the line voltage is $\\sqrt{3}$ times the phase voltage.",
+                question: "In a Wye-connected source, the line voltage is √3 times the phase voltage.",
                 answer: true,
                 explanation: "In a Wye configuration, the line voltage is the phasor sum of two phase voltages, resulting in a $\\sqrt{3}$ times magnitude difference."
             },
@@ -411,14 +411,14 @@
                 explanation: "A lagging power factor means the current waveform is *lagging* (following) the voltage waveform, common with inductive loads like motors."
             },
             {
-                question: "The total real power in a balanced three-phase system (Wye or Delta) is given by $P = \\sqrt{3} V_L I_L \\cos\\theta$, where $\\theta$ is the phase angle between phase voltage and phase current.",
+                question: "The total real power in a balanced three-phase system (Wye or Delta) is given by P = √3 * VL * IL * cos(φ), where φ is the phase angle between phase voltage and phase current.",
                 answer: true,
                 explanation: "This formula is universally applicable for calculating total real power in a balanced three-phase system, using line quantities and the power factor angle."
             },
             {
                 question: "In a balanced three-phase system, the apparent power for the entire system is simply the sum of the apparent power of each phase.",
                 answer: true,
-                explanation: "For balanced systems, total apparent power (S) is three times the apparent power per phase, or $S = \\sqrt{3}V_L I_L$."
+                explanation: "For balanced systems, total apparent power (S) is three times the apparent power per phase, or S = √3 * VL * IL."
             },
             {
                 question: "A common application of a Delta-Wye transformer connection is to step down voltage while simultaneously providing a neutral for single-phase loads.",
